--- a/Labs/Project/ALU/driver_7seg_summary.html
+++ b/Labs/Project/ALU/driver_7seg_summary.html
@@ -68,9 +68,10 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/GIT/Digital-electronics-1/Labs/Project/ALU\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>út 21. dub 19:34:59 2020</TD></TR>
 <TR ALIGN=LEFT><TD>Post-Fit Simulation Model Report</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/21/2020 - 15:20:40</center>
+<br><center><b>Date Generated:</b> 04/21/2020 - 21:07:41</center>
 </BODY></HTML>
