--- a/Labs/Project/ALU/top_summary.html
+++ b/Labs/Project/ALU/top_summary.html
@@ -12,7 +12,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>New</TD>
+<TD>New (Failed)</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -73,5 +73,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/21/2020 - 21:38:18</center>
+<br><center><b>Date Generated:</b> 04/21/2020 - 21:48:00</center>
 </BODY></HTML>
