--- a/Labs/Project/ALU/top_summary.html
+++ b/Labs/Project/ALU/top_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>ALU2.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -72,5 +73,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/27/2020 - 12:18:45</center>
+<br><center><b>Date Generated:</b> 04/27/2020 - 12:24:26</center>
 </BODY></HTML>
